force-app/main/default/objects/Integration_Interface__mdt/Integration_Interface__mdt.object-meta.xml
<CustomObject>
    <label>Integration Interface</label>
    <pluralLabel>Integration Interfaces</pluralLabel>
</CustomObject>