force-app/main/default/objects/Integration_Interface__mdt/fields/EndPoint_URL__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_URL__c</fullName>
    <label>EndPoint URL</label>
    <type>TextArea</type>
</CustomField>